--- a/index.html
+++ b/index.html
@@ -45,25 +45,69 @@
         <!-- MAIN SECTION -->
         <div class="row p-3">
 
-            <!-- Train Timetables -->
+            <!-- Train Timetable -->
             <div class="col-md-9 border border-secondary rounded">
+                <h3 class="m-2">Current Train Schedule</h3>
+                <table class="table table-hover">
+                    <thead class="thead-light">
+                        <tr>
+                        <th scope="col">Train Name</th>
+                        <th scope="col">Destination</th>
+                        <th scope="col">Frequency (min)</th>
+                        <th scope="col">Next Arrival</th>
+                        <th scope="col">Minutes Away</th>
+                        </tr>
+                    </thead>
 
+                    <tbody id="train-list">
+                        <!-- TRAIN INFO PRINTS HERE in Below Format-->
+                        <!-- <tr>
+                        <th scope="row"></th>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        </tr> -->
+                    </tbody>
+                </table>
             </div>
-            <!-- END Train Timetables -->
+            <!-- END Train Timetable -->
 
             <!-- FORM - NEW TRAIN QUERY -->
             <div class="col-md border border-secondary rounded ml-3">
-                <form id="new-topic-form" role="form">
-                    <h2>Add a Train</h2>
+                <h3 class="m-2">Add a Train</h3>
+                <form id="new-train-form" role="form">
+                    
                     <div class="form-group">
-                        <label for="new-train-input">
-                            Train Name:
+                        <label for="new-train-name">
+                            Train Name
                         </label>
-                        <input class="form-control" id="new-train-input" type="text" />
+                        <input class="form-control" id="new-train-name" type="text" required="required" />
+                    </div>
+
+                    <div class="form-group">
+                        <label for="train-destination">
+                            Destination
+                        </label>
+                        <input type="text" class="form-control" name="train-destination" id="train-destination" required="required" />
+                    </div>
+
+                    <div class="form-group">
+                        <label for="train-start-time">
+                            First Train Time
+                        </label>
+                        <input type="time" class="form-control" name="train-start-time" id="train-start-time" required="required" /> <!-- TODO- Make Sure Military Time -->
+                    </div>
+
+                    <div class="form-group">
+                        <label for="train-frequency">
+                            Frequency (min)
+                        </label>
+                        <input type="number" class="form-control"  name="train-frequency" id="train-frequency" min="1" max="120" required="required" />
                     </div>
                     
                     <!-- Button triggers new train to be added -->
-                    <input class="btn btn-sm btn-info" id="add-topic" type="submit" value="Add a Train" />                    
+                    <input class="btn btn-sm btn-info" id="add-train" type="submit" value="Submit" />                    
                 </form>
             </div>
             <!-- END FORM - NEW TRAIN QUERY -->
