more small things in index

--- a/index.html
+++ b/index.html
@@ -121,5 +121,9 @@
         <!-- END MAIN SECTION -->
 
     </div>
+
+    <!-- Main JS File Link -->
+    <script src="./scripts.js"></script>
+    <!-- END Main JS File Link -->
 </body>
 </html>
